# File-Manager

./: .clang-format  .clang-tidy  CMakeLists.txt  CompileOptions.cmake  FileModelOperations.cpp  FileModelOperations.h  FileOperations.cpp  FileOperations.h  MenuManager.cpp  MenuManager.h  README.md  TabManager.cpp  TabManager.h  TableManager.cpp  TableManager.h  ThemeManager.cpp  ThemeManager.h  ToolBarManager.cpp  ToolBarManager.h  TreeManager.cpp  TreeManager.h  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  resources.qrc
include/: AbstractFileOp.h  ApplicationStateHandler.h  ColumnManager.h  CopyFileOperation.h  DeleteFileOperation.h  EventHandler.h  FM_Macros.hpp  FileModelOperations.h  FileOperationManager.h  FileOperationView.h  IFileOperation.h  MenuBarView.h  MoveFileOperation.h  NewFolderOperation.h  PasteFileOperation.h  RenameFileOperation.h  SettingsDialog.h  TabManager.h  TableManager.h  ThemeManager.h  ToolBarManager.h  TreeManager.h  mainwindow.hpp
src/: ApplicationStateHandler.cpp  ColumnManager.cpp  DeleteFileOperation.cpp  FileModelOperations.cpp  FileOperationManager.cpp  FileOperationView.cpp  MenuBarView.cpp  MoveFileOperation.cpp  PasteFileOperation.cpp  SettingsDialog.cpp  TabManager.cpp  TableManager.cpp  ThemeManager.cpp  ToolBarManager.cpp  TreeManager.cpp  main.cpp  mainwindow.cpp
styles/: button-style-new.qss  style.qss  styleDark.qss
ui/: mainwindow.ui  settingsdialog.ui
